--- a/std-management/std-management.csproj
+++ b/std-management/std-management.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="Enitity.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
