--- a/std-management/std-management.csproj
+++ b/std-management/std-management.csproj
@@ -61,11 +61,23 @@
     <Compile Include="AddNewCourseForm.Designer.cs">
       <DependentUpon>AddNewCourseForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddStudentForm.cs">
+    <Compile Include="ManageStudentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddStudentForm.Designer.cs">
-      <DependentUpon>AddStudentForm.cs</DependentUpon>
+    <Compile Include="ManageStudentForm.Designer.cs">
+      <DependentUpon>ManageStudentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PrintStudentsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PrintStudentsForm.Designer.cs">
+      <DependentUpon>PrintStudentsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StudentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentForm.Designer.cs">
+      <DependentUpon>StudentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ListStudentForm.cs">
       <SubType>Form</SubType>
@@ -84,12 +96,6 @@
     </Compile>
     <Compile Include="EditCourseForm.Designer.cs">
       <DependentUpon>EditCourseForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="EditStudentForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="EditStudentForm.Designer.cs">
-      <DependentUpon>EditStudentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Enitity.cs" />
     <Compile Include="Helper.cs" />
@@ -166,8 +172,14 @@
     <EmbeddedResource Include="AddNewCourseForm.resx">
       <DependentUpon>AddNewCourseForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddStudentForm.resx">
-      <DependentUpon>AddStudentForm.cs</DependentUpon>
+    <EmbeddedResource Include="ManageStudentForm.resx">
+      <DependentUpon>ManageStudentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PrintStudentsForm.resx">
+      <DependentUpon>PrintStudentsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StudentForm.resx">
+      <DependentUpon>StudentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ListStudentForm.resx">
       <DependentUpon>ListStudentForm.cs</DependentUpon>
@@ -177,9 +189,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditCourseForm.resx">
       <DependentUpon>EditCourseForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="EditStudentForm.resx">
-      <DependentUpon>EditStudentForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoadingForm.resx">
       <DependentUpon>LoadingForm.cs</DependentUpon>
